# katari

./: .dockerignore  .env.example  .gitignore  .hlint.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  biome.json  compose.yaml  docker-compose.yml  justfile  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stack.yaml
.claude/: settings.json
doc/: DRAFT20260326.md  DRAFT20260406.md  FIX20260409.md  FIX20260413.md  IR-Spec.md  NominalTypes.md
docs/: 2026-05-30-implementation-plan.md  2026-05-30-overview.md  2026-05-30-phase-e-actor-host.md  2026-05-30-runtime-architecture.md  2026-05-30-storage-schema-and-api.md  2026-05-30-v0.2-streaming.md  2026-05-30-value-and-streaming.md  2026-06-01-entity-model.md  2026-06-03-type-lattice-unification.md  2026-06-04-bidirectional-typechecker.md  2026-06-04-generics.md  2026-06-06-generic-data-record-variance.md  2026-06-08-scope-closure-entity.md  2026-06-15-runtime-domain-model.md  2026-06-15-runtime-implementation-plan.md  2026-06-19-per-module-snapshot.md  2026-06-20-generics-inference.md  2026-06-24-api-core-connection.md  2026-06-25-reactor-bus-redesign.md  2026-06-25-reactor-persist-redesign.md  2026-06-25-three-layer-runtime.md  2026-07-02-json-boundary-ai-interop.md  2026-07-03-ffi-inner-delegation.md  2026-07-03-throw-error-model.md  2026-07-06-run-trace-and-run-instance.md  2026-07-07-composability-reflection-webhook.md  2026-07-09-slim-blob-ref.md  2026-07-10-finally.md  2026-07-10-ir-drop.md  2026-07-10-mcp-oauth.md  2026-07-10-mcp-pull.md  2026-07-12-retry.md  (+22 more)
rust/: Cargo.toml
rust/katari-protocol/: Cargo.toml
rust/katari-protocol/src/: lib.rs  types.rs
rust/katari-runtime/: Cargo.toml
rust/katari-runtime/src/: db.rs  lib.rs  main.rs  value.rs
rust/katari-runtime/src/bytecode/: leb128.rs  mod.rs
rust/katari-runtime/src/ir/: instruction.rs  mod.rs
rust/katari-runtime/src/runtime/: agent.rs  event.rs  execute.rs  for_loop.rs  handle.rs  mod.rs  par.rs  primitive.rs  request.rs  signal.rs  thread.rs
rust/katari-runtime/src/server/: apply.rs  mod.rs  protocol.rs  run.rs  state.rs  types.rs
rust/katari-runtime/tests/: basic.rs
rust/qatali-runtime/: Cargo.toml
rust/qatali-runtime/src/: main.rs
(+1018 files in other folders)
