[workspace]
resolver = "3"
members = ["katari-protocol", "katari-runtime"]

[workspace.package]
version = "0.1.0"
authors = ["yukikurage"]
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
anyhow = { version = "1" }
thiserror = { version = "2" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8" }
tower-http = { version = "0.6", features = ["trace", "cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = { version = "0.22" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
indexmap = { version = "2", features = ["serde"] }
