[package]
name = "katari-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "katari-runtime"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower-http.workspace = true
uuid.workspace = true
reqwest.workspace = true
base64.workspace = true
sqlx.workspace = true
indexmap.workspace = true
