[package]
name        = "qatali-runtime"
description = "Server for running Qatali programs"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true

[[bin]]
name = "qatali-runtime"
path = "src/main.rs"

[dependencies]
tokio.workspace              = true
serde.workspace              = true
serde_json.workspace         = true
anyhow.workspace             = true
thiserror.workspace          = true
tracing.workspace            = true
tracing-subscriber.workspace = true
axum.workspace               = true
tower-http.workspace         = true
uuid.workspace               = true
